name:                animations
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/edeijl/animations#readme
license:             BSD3
license-file:        LICENSE
author:              Erik Deijl
maintainer:          erik.deijl@gmail.com
copyright:           MIT
category:            FRP
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10


executable animations-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , reactive-banana == 1.1.0.0
                     , reactive-banana-sdl2 == 0.1.0.0
                     , sdl2-image == 0.1.3.2
                     , sdl2 >= 2.1
  default-language:    Haskell2010

test-suite animations-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , animations
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/edeijl/animations
