name:                Animations
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/edeijl/animations#readme
license:             BSD3
license-file:        LICENSE
author:              Erik Deijl
maintainer:          erik.deijl@gmail.com
copyright:           MIT
category:            FRP
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
data-dir:            data
data-files:          *.png


executable Animations-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , filepath >= 1.1 
                     , reactive-banana == 1.1.0.0
                     , reactive-banana-sdl2 == 0.1.0.0
                     , sdl2-image == 0.1.3.2
                     , sdl2 >= 2.1
                     , executable-path == 0.0.*
                     , transformers
                     , linear == 1.20.3
                     , lens == 4.13
  other-modules:       Paths
                     , Animations.Types
                     , Animations.Utils
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/edeijl/animations
